# lacic.github.io

./: .env.example  .gitignore  CNAME  contact.html  experience.html  index.html  index.md  main_pubs.html  projects.html  pyproject.toml  research.html  resume.html  selected_pubs.html  services.html  sidebar.html  speaking.html
assets/css/: main.css
css/: style.css
documents/summaries/: 2018_CIKM_AFEL.md  2018_CIKM_CF.md  2018_IT_SI_Journal.md  2018_RECSYS_TRUST.md  2019_RecSys_Data_Markets.md  2019_RecSys_Emb.md  2019_RecSys_HGV.md  2020ismis_trust.md  2020umuai_job.md  2021_children.md  2021_pharmaceuticals.md  2022_ECIR_bias.md  2022_ECIR_industry.md  2022_ECIR_news.md  2022_phd_cummulative_elacic.md  2023_ECIR_uptrendz.md  ECTEL_2013.md  HT_2014_SP.md  HT_2014_SocRecM.md  HT_2014_TagRec.md  HT_2016_DC.md  HT_2016_HighEnoguh.md  KTL_2017.md  LSRS_2015_ScaR.md  MMSM_2015.md  RS_BDA_2016.md  RS_BDA_2017.md  RecSys_2015_CS.md  SigWeb_2017.md  TagRec_SigWeb.md  WSDM2018_IFUP.md  elacic_cv.md  elacic_cv_old.md  elacic_cv_old2.md  iKNOW_2015_SSS.md  iKNOW_2015_TripRebel.md  lacic_cv_old.md  phd_rigorosum_short_slides.md  w12srs11.md
scripts/: README.md  summarize_papers.py  summary_prompt.txt
