[project]
name = "paper-summarizer"
version = "0.1.0"
description = "Automated research paper summarization using Azure OpenAI"
requires-python = ">=3.11"
dependencies = [
    "pydantic-ai>=0.0.14",
    "python-dotenv>=1.0.0",
    "pypdf>=4.0.0",
    "openai>=1.12.0",
]

[tool.uv]
dev-dependencies = []
